[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game/Assets/Images/Mask-8bits-LightOff.png" type="Texture" id=1]
[ext_resource path="res://Game/GUIComponents/GameControls/GameControls.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.980392, 0.839216, 0.423529 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="GameControls" type="CanvasLayer"]
layer = 127

[node name="InputsHandler" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="InputsHandler"]
wait_time = 6.0
autostart = true

[node name="Game_UI_Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Game_UI_Buttons"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WalkRightBtn" type="Button" parent="Game_UI_Buttons"]
light_mask = 0
anchor_left = 0.753
anchor_top = 0.402
anchor_right = 1.0
anchor_bottom = 0.6
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 48, 32 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
keep_pressed_outside = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WalkDownBtn" type="Button" parent="Game_UI_Buttons"]
light_mask = 0
anchor_left = 0.4
anchor_top = 0.762
anchor_right = 0.6
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 48, 32 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
keep_pressed_outside = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WalkLeftBtn" type="Button" parent="Game_UI_Buttons"]
light_mask = 0
anchor_top = 0.402
anchor_right = 0.253
anchor_bottom = 0.603
grow_vertical = 2
rect_min_size = Vector2( 48, 32 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
keep_pressed_outside = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WalkUpBtn" type="Button" parent="Game_UI_Buttons"]
light_mask = 0
anchor_left = 0.4
anchor_right = 0.6
anchor_bottom = 0.262
grow_horizontal = 2
rect_min_size = Vector2( 48, 32 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 3 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
keep_pressed_outside = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Run" type="CheckButton" parent="Game_UI_Buttons"]
anchor_left = 0.812
anchor_top = 0.854
anchor_right = 0.941
anchor_bottom = 0.904
rect_min_size = Vector2( 72, 28 )
rect_scale = Vector2( 0.8, 0.8 )
mouse_default_cursor_shape = 2
custom_colors/font_color_hover_pressed = Color( 0.568627, 0.72549, 0, 1 )
custom_colors/font_color = Color( 0.72549, 0.72549, 0.72549, 1 )
custom_colors/font_color_hover = Color( 1, 0.960784, 0, 1 )
custom_colors/font_color_pressed = Color( 0.196078, 1, 0, 1 )
shortcut_in_tooltip = false
text = "Run"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="InputsHandler/Timer" to="InputsHandler" method="_on_MouseTimer_timeout"]
[connection signal="button_down" from="Game_UI_Buttons/WalkRightBtn" to="InputsHandler" method="_on_WalkRightBtn_button_down"]
[connection signal="button_up" from="Game_UI_Buttons/WalkRightBtn" to="InputsHandler" method="stop"]
[connection signal="button_down" from="Game_UI_Buttons/WalkDownBtn" to="InputsHandler" method="_on_WalkDownBtn_button_down"]
[connection signal="button_up" from="Game_UI_Buttons/WalkDownBtn" to="InputsHandler" method="stop"]
[connection signal="button_down" from="Game_UI_Buttons/WalkLeftBtn" to="InputsHandler" method="_on_WalkLeftBtn_button_down"]
[connection signal="button_up" from="Game_UI_Buttons/WalkLeftBtn" to="InputsHandler" method="stop"]
[connection signal="button_down" from="Game_UI_Buttons/WalkUpBtn" to="InputsHandler" method="_on_WalkUpBtn_button_down"]
[connection signal="button_up" from="Game_UI_Buttons/WalkUpBtn" to="InputsHandler" method="stop"]
[connection signal="toggled" from="Game_UI_Buttons/Run" to="InputsHandler" method="run_toggled"]
